@@ -22,6 +22,7 @@
 package com.jcraft.jsch;
 
 public interface MAC{
+  String getName();
   int getBlockSize(); 
   void init(byte[] key) throws Exception; 
   void update(byte[] foo, int start, int len);
